tests/lean/holes.lean.expected.out
holes.lean:4:4: error: placeholders '_' cannot be used where a function is expected
holes.lean:11:8: error: don't know how to synthesize placeholder
context:
case hole
x : Nat
y : Nat := g x + g x
⊢ Nat
holes.lean:11:4: error: don't know how to synthesize placeholder
context:
x : Nat
y : Nat := g x + g x
⊢ Nat
holes.lean:10:15: error: don't know how to synthesize implicit argument
  @g … ?m …
context:
x : Nat
⊢ Type
holes.lean:10:9: error: don't know how to synthesize implicit argument
  @g … ?m …
context:
x : Nat
⊢ Type
holes.lean:13:7: error: failed to infer binder type
holes.lean:15:16: error: failed to infer binder type
holes.lean:18:6: error: failed to infer binder type
holes.lean:21:25: error: failed to infer definition type
holes.lean:25:8: error: failed to infer 'let rec' declaration type
